@startuml

title __MOBILEFACTORY's Class Diagram__\n

  namespace mobilefactory {
    class mobilefactory.IOSMobileFactory {
        + createAntenna()
        + createBattery()
        + createCamera()
        + createOSSoftware()
    }
  }
  

  namespace mobilefactory {
    abstract class mobilefactory.MobilePhone {
        + osSoftwares : OSSoftware[]
        {abstract} + producing()
    }
  }
  

  namespace mobilefactory {
    interface mobilefactory.MobilePhoneFactory {
        {abstract} + createAntenna()
        {abstract} + createBattery()
        {abstract} + createCamera()
        {abstract} + createOSSoftware()
    }
  }
  

  namespace mobilefactory {
    interface mobilefactory.ModelInformation {
    }
  }
  

  namespace mobilefactory {
    enum IOSModel {
      IPhone11
      IPhone11Pro
    }
  }
  

  namespace mobilefactory {
    enum SamsungModel {
      Note10
      Note8
      Note9
    }
  }
  

  namespace mobilefactory {
    class mobilefactory.SamsungMobileFactory {
        + createAntenna()
        + createBattery()
        + createCamera()
        + createOSSoftware()
    }
  }
  

  namespace mobilefactory {
    class mobilefactory.VietnamFactory {
        ~ createMobilePhone()
        - AppleVietnamFactory()
        - SamsungVietnamFactory()
    }
  }
  

  mobilefactory.IOSMobileFactory .up.|> mobilefactory.MobilePhoneFactory
  mobilefactory.MobilePhone o-- mobilefactory.mobileComponent.Antenna : antenna
  mobilefactory.MobilePhone o-- mobilefactory.mobileComponent.Battery : battery
  mobilefactory.MobilePhone o-- mobilefactory.mobileComponent.Camera : camera
  mobilefactory.MobilePhone o-- mobilefactory.mobileComponent.ModelDetailInformation : modelInformation
  mobilefactory.ModelInformation +-down- mobilefactory.ModelInformation.IOSModel
  mobilefactory.ModelInformation +-down- mobilefactory.ModelInformation.SamsungModel
  mobilefactory.SamsungMobileFactory .up.|> mobilefactory.MobilePhoneFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
